--- a/achat.html
+++ b/achat.html
@@ -6,8 +6,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
 <meta name="description" content="Acheter le livre – Le Testament d’Azénor — page du site officiel du Testament d’Azénor : univers, personnages et ressources.">
-<link rel="canonical" href="https://alain7544.github.io/azenor/achat.html">
-
 <link href="https://fonts.googleapis.com" rel="preconnect"/>
 <link crossorigin href="https://fonts.gstatic.com" rel="preconnect"/>
 <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Inter:wght@300;400;500&display=swap" rel="stylesheet"/>
@@ -31,7 +29,7 @@ h1{color:#f28c28;font-family:'Libre Baskerville',serif;margin-bottom:2rem}
 .retailer-list li{border-top:1px solid rgba(255,255,255,0.12)}
 .retailer-list li:first-child{border-top:none}
 .retailer-list a{display:flex;align-items:center;gap:1.1rem;padding:.95rem 0;text-decoration:none;color:#f28c28}
-.retailer-list img{width:70px;height:auto;display:block}
+.retailer-list img{width:90px;height:auto;display:block}
 .retailer-list span{border-bottom:1px solid rgba(242,140,40,0.35)}
 .retailer-list a:hover span{border-bottom-color:#f28c28}
 .small-note{margin-top:1.8rem;font-size:.95rem;opacity:.85;text-align:center}
@@ -41,9 +39,7 @@ h1{color:#f28c28;font-family:'Libre Baskerville',serif;margin-bottom:2rem}
 <body>
 <header class="site-header">
 <nav class="nav">
-  <div class="nav-title">
-    <a href="index.html">retour</a>
-  </div>
+  <div class="nav-title"><a href="index.html">retour</a></div>
   <div class="nav-menu">
     <a href="lieux-du-roman.html">les lieux<span>du roman</span></a>
     <a href="personnages.html">les<span>personnages</span></a>
@@ -69,10 +65,8 @@ h1{color:#f28c28;font-family:'Libre Baskerville',serif;margin-bottom:2rem}
     <div class="publisher-name">Éditions L’Harmattan</div>
   </div>
 
-  <a class="buy-link"
-     href="https://www.editions-harmattan.fr/catalogue/livre/le-testament-dazenor/81789"
-     target="_blank" rel="noopener">
-     Acheter chez l’éditeur
+  <a class="buy-link" href="https://www.editions-harmattan.fr/catalogue/livre/le-testament-dazenor/81789" target="_blank" rel="noopener">
+    Acheter chez l’éditeur
   </a>
 
   <div class="retailers" aria-label="Autres points de vente">
@@ -80,30 +74,26 @@ h1{color:#f28c28;font-family:'Libre Baskerville',serif;margin-bottom:2rem}
 
     <ul class="retailer-list">
       <li>
-        <a href="https://www.leslibraires.fr/livre/26250550-le-testament-d-azenor-une-epopee-du-vie-siecle-breton-alain-bertrand-l-harmattan"
-           target="_blank" rel="noopener">
-          <img src="/azenor/images/accueil/leslibraires.svg?v=2" alt="Leslibraires.fr">
+        <a href="https://www.leslibraires.fr/livre/26250550-le-testament-d-azenor-une-epopee-du-vie-siecle-breton-alain-bertrand-l-harmattan" target="_blank" rel="noopener">
+          <img src="images/accueil/leslibraires.png" alt="Leslibraires.fr">
           <span>Leslibraires.fr</span>
         </a>
       </li>
       <li>
-        <a href="https://www.decitre.fr/livres/le-testament-d-azenor-9782336593012.html"
-           target="_blank" rel="noopener">
-          <img src="/azenor/images/accueil/decitre.svg?v=2" alt="Decitre">
+        <a href="https://www.decitre.fr/livres/le-testament-d-azenor-9782336593012.html" target="_blank" rel="noopener">
+          <img src="images/accueil/decitre.png" alt="Decitre">
           <span>Decitre</span>
         </a>
       </li>
       <li>
-        <a href="https://www.cultura.com/p-le-testament-d-azenor-une-epopee-du-vie-siecle-breton-9782336593012.html"
-           target="_blank" rel="noopener">
-          <img src="/azenor/images/accueil/cultura.svg?v=2" alt="Cultura">
+        <a href="https://www.cultura.com/p-le-testament-d-azenor-une-epopee-du-vie-siecle-breton-9782336593012.html" target="_blank" rel="noopener">
+          <img src="images/accueil/cultura.png" alt="Cultura">
           <span>Cultura</span>
         </a>
       </li>
       <li>
-        <a href="https://www.amazon.fr/dp/2336593017"
-           target="_blank" rel="noopener">
-          <img src="/azenor/images/accueil/amazon.svg?v=2" alt="Amazon">
+        <a href="https://www.amazon.fr/dp/2336593017" target="_blank" rel="noopener">
+          <img src="images/accueil/amazon.png" alt="Amazon">
           <span>Amazon</span>
         </a>
       </li>
