--- a/achat.html
+++ b/achat.html
@@ -6,13 +6,13 @@
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 
 <meta name="description" content="Acheter le livre – Le Testament d’Azénor — page du site officiel du Testament d’Azénor : univers, personnages et ressources.">
-<link rel="canonical" href="https://alain7544.neocities.org/achat.html">
+<link rel="canonical" href="https://azenor.org/achat.html">
 
 <meta property="og:locale" content="fr_FR">
 <meta property="og:type" content="article">
 <meta property="og:title" content="Acheter le livre – Le Testament d’Azénor">
 <meta property="og:description" content="Acheter le livre – Le Testament d’Azénor — page du site officiel du Testament d’Azénor : univers, personnages et ressources.">
-<meta property="og:url" content="https://alain7544.neocities.org/achat.html">
+<meta property="og:url" content="https://azenor.org/achat.html">
 <meta property="og:site_name" content="Le Testament d’Azénor">
 
 <link href="https://fonts.googleapis.com" rel="preconnect"/>
