--- a/achat.html
+++ b/achat.html
@@ -236,6 +236,7 @@ h1{
     <h2>Autres points de vente</h2>
 
     <ul class="retailer-links">
+      <li><a href="https://www.placedeslibraires.fr/livre/9782336593012-le-testament-d-azenor-une-epopee-du-vie-siecle-breton-alain-bertrand/" target="_blank" rel="noopener">Place des Libraires</a></li>
       <li><a href="https://www.leslibraires.fr/livre/26250550-le-testament-d-azenor-une-epopee-du-vie-siecle-breton-alain-bertrand-l-harmattan" target="_blank" rel="noopener">Leslibraires.fr</a></li>
       <li><a href="https://www.decitre.fr/livres/le-testament-d-azenor-9782336593012.html" target="_blank" rel="noopener">Decitre</a></li>
       <li><a href="https://www.cultura.com/p-le-testament-d-azenor-une-epopee-du-vie-siecle-breton-9782336593012.html" target="_blank" rel="noopener">Cultura</a></li>
