--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="alternate" hreflang="en" href="https://azenor.org/en/">
   <link rel="alternate" hreflang="x-default" href="https://azenor.org/">
 
-  <!-- Open Graph -->
+  <!-- Open Graph / WhatsApp – FR -->
   <meta property="og:locale" content="fr_FR">
   <meta property="og:type" content="website">
   <meta property="og:title" content="Azénor – Le site officiel du roman Le Testament d’Azénor">
@@ -26,18 +26,299 @@
   <meta property="og:image:secure_url" content="https://azenor.org/images/accueil/copiste.png">
   <meta property="og:image:type" content="image/png">
 
-  <!-- Twitter -->
+  <!-- Twitter / X -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Azénor – Le site officiel du roman Le Testament d’Azénor">
   <meta name="twitter:description" content="Site officiel autour d’Azénor, héroïne du roman historique Le Testament d’Azénor.">
   <meta name="twitter:image" content="https://azenor.org/images/accueil/copiste.png">
 
+  <!-- CSS -->
   <link rel="stylesheet" href="css/style.css">
 
-  <!-- (tes styles inline peuvent rester ici, mais idéalement à déplacer dans style.css) -->
+  <!-- Styles inline (conservés tels quels) -->
   <style>
-    /* ... garde ici tes styles ... */
+    :root{
+      --accent:#f28c28;
+      --fg:#f2f2f2;
+      --muted:#cccccc;
+      --card: rgba(0,0,0,.52);
+      --border: rgba(255,255,255,.12);
+    }
+    *{ box-sizing:border-box; }
+    body{
+      margin:0;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Arial, sans-serif;
+      color:var(--fg);
+      background:
+        linear-gradient(rgba(0,0,0,.35), rgba(0,0,0,.55)),
+        url("images/accueil/fond-accueil.jpg") center / cover no-repeat fixed;
+      padding-bottom: 110px; /* espace pour footer fixe */
+    }
+    a{ color:inherit; text-decoration:none; }
+
+    header{
+      position:sticky;
+      top:0;
+      z-index:10;
+      background:rgba(0,0,0,.65);
+      backdrop-filter: blur(6px);
+      border-bottom:1px solid rgba(255,255,255,.1);
+    }
+    .nav{
+      max-width:1200px;
+      margin:auto;
+      padding:14px 18px;
+      display:flex;
+      align-items:center;
+      gap:16px;
+      flex-wrap:wrap;
+    }
+    .title a{
+      font-weight:700;
+      color:var(--accent);
+      white-space:nowrap;
+    }
+    .menu{
+      flex:1;
+      display:flex;
+      gap:10px;
+      flex-wrap:wrap;
+    }
+    .menu a{
+      color:var(--accent);
+      padding:6px 10px;
+      border-radius:999px;
+      border:1px solid rgba(255,255,255,.15);
+      background:rgba(0,0,0,.25);
+    }
+    .menu a:hover{ border-color:var(--accent); }
+    .lang{ display:flex; gap:8px; }
+    .lang a{
+      width:34px;
+      height:24px;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      border-radius:6px;
+      border:1px solid rgba(255,255,255,.25);
+      background:rgba(0,0,0,.25);
+    }
+
+    main{
+      max-width:1200px;
+      margin:auto;
+      padding:36px 18px 44px;
+      margin-bottom: 0 !important;
+      padding-bottom: 0 !important;
+    }
+    .hero{
+      display:grid;
+      grid-template-columns: 480px 1fr;
+      gap:32px;
+      align-items:start;
+    }
+    @media(max-width:980px){ .hero{ grid-template-columns:1fr; } }
+
+    .card{
+      background:var(--card);
+      border:1px solid var(--border);
+      border-radius:14px;
+      padding:18px;
+      box-shadow:0 12px 30px rgba(0,0,0,.35);
+    }
+    .cover{
+      width:100%;
+      max-width:480px;
+      display:block;
+      margin:auto;
+      border-radius:0 !important; /* sans arrondi */
+      box-shadow: 0 10px 28px rgba(0,0,0,.45) !important;
+    }
+    h1{
+      margin:0 0 12px;
+      color:var(--accent);
+      font-size: clamp(1.6rem, 2.2vw, 2.1rem);
+    }
+    .intro{
+      line-height:1.75;
+      color:var(--muted);
+      font-size: 1.02rem;
+      white-space: pre-wrap;
+    }
+
+    .menu a[aria-current="page"], .menu a.active{
+      background: rgba(242,140,40,0.22) !important;
+      border-color: rgba(242,140,40,0.9) !important;
+      color: var(--accent) !important;
+    }
+
+    /* Mobile menu horizontal scroll */
+    @media (max-width: 768px){
+      header .nav{ align-items: center; }
+      header .nav nav.menu{
+        flex-wrap: nowrap;
+        overflow-x: auto;
+        overflow-y: hidden;
+        -webkit-overflow-scrolling: touch;
+        white-space: nowrap;
+        gap: 8px;
+      }
+      header .nav nav.menu a{
+        flex: 0 0 auto;
+        white-space: nowrap;
+      }
+    }
+
+    /* Patch : enlever le cadre autour de la couverture */
+    .hero > .card:first-child{
+      background: transparent !important;
+      border: none !important;
+      box-shadow: none !important;
+      padding: 0 !important;
+    }
+
+    /* Footer fixe */
+    .site-footer, footer.site-footer{
+      position: fixed;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      z-index: 9999;
+      background:#000;
+      padding:1.6rem 0;
+      margin-top: 0 !important;
+    }
+    .site-footer .footer-inner{
+      max-width:1200px;
+      margin:0 auto;
+      padding:0 1.5rem;
+      display:flex;
+      justify-content:space-between;
+      align-items:center;
+    }
+    .footer-left{
+      display:flex;
+      align-items:center;
+      gap:1.2rem;
+    }
+    .social-icons .icon{
+      display:inline-flex;
+      align-items:center;
+      justify-content:center;
+      width:32px;
+      height:32px;
+      border-radius:50%;
+      border:1px solid #f28c28;
+      margin-right:0.5rem;
+    }
+    .social-icons svg{
+      width:16px;
+      height:16px;
+      fill:#f28c28;
+    }
+    .footer-right .buy-btn{
+      background:linear-gradient(#3a3a3a, #1f1f1f);
+      color:#f28c28;
+      padding:0.55rem 1.2rem;
+      text-decoration:none;
+      font-weight:500;
+      border-radius:3px;
+      box-shadow:0 2px 4px rgba(0,0,0,0.6);
+    }
   </style>
 </head>
 
 <body>
+
+<header>
+  <div class="nav">
+    <div class="title"><a href="/">Azénor</a></div>
+
+    <nav aria-label="Navigation" class="menu">
+      <a href="lieux-du-roman.html">Lieux</a>
+      <a href="personnages.html">Personnages</a>
+      <a href="livre-des-conquetes.html">Conquêtes</a>
+      <a href="veritable-legende-azenor.html">La légende</a>
+      <a href="bibliographie.html">Bibliographie</a>
+      <a href="making-off.html">making of</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+
+    <div aria-label="Choix de la langue" class="lang">
+      <a href="en/index.html" title="English version">🇬🇧</a>
+    </div>
+  </div>
+</header>
+
+<main>
+  <section class="hero">
+    <div class="card">
+      <img alt="Couverture du livre Le Testament d’Azénor" class="cover" src="images/accueil/couverture.jpg"/>
+    </div>
+
+    <div class="card">
+      <h1>Azénor – héroïne du roman <em>Le Testament d’Azénor</em></h1>
+
+      <div class="intro">Azénor est le personnage central du roman historique <em>Le Testament d’Azénor</em>, écrit par Alain Bertrand et publié aux éditions L’Harmattan.
+
+De Brest à l’île d’Ouessant, des îles d’Aran aux rivages sauvages de Bréhat, ce roman plonge dans la fabuleuse légende d’Azénor et de son fils Budoc, entre histoire et mystère.
+
+Accusée d’adultère, la jeune princesse Azénor est condamnée à dériver sur l’océan. Son fils Budoc naît au cœur des îles d’Aran et grandit sous la protection de saint Enda, dans une école monastique où se forgent les grands esprits de son temps. Devenu moine à son tour, il ramènera en Armorique l’héritage de son maître et fondera sur l’île de Lavrec une école où s’épanouiront savoir et foi.
+
+Mais au centre de cette fresque historique se trouve un manuscrit, rédigé par Tadhgán l’Irlandais, ancien druide devenu moine et précepteur d’Azénor. Un texte qui renferme une vérité capable de bouleverser les certitudes et d’attiser les convoitises. Trahisons, rivalités et luttes d’influence s’entrelacent autour de ces pages interdites, tandis que l’avenir de la Bretagne et de l’Irlande se dessine dans l’ombre des monastères et des prophéties.
+
+S’appuyant sur les Vies des Saints de Bretagne et d’Irlande, ce roman historique, aux allures de polar médiéval, mêle réalité et légende dans une épopée où le savoir peut être un héritage… ou une malédiction.</div>
+    </div>
+  </section>
+</main>
+
+<script>
+window.addEventListener('DOMContentLoaded', () => {
+  const links = document.querySelectorAll('.menu a[href]');
+  if (!links.length) return;
+
+  const current = (location.pathname.split('/').pop() || 'index.html').toLowerCase();
+  links.forEach(a => {
+    const href = (a.getAttribute('href') || '').split('?')[0].split('#')[0].toLowerCase();
+    const target = href.split('/').pop();
+    if (target && target === current) {
+      a.setAttribute('aria-current', 'page');
+      a.classList.add('active');
+    }
+  });
+});
+</script>
+
+<footer class="site-footer">
+  <div class="footer-inner">
+    <div class="footer-left">
+      <div class="social-icons">
+        <!-- LinkedIn -->
+        <a class="icon" href="https://www.linkedin.com/sharing/share-offsite/?url=https://azenor.org/" rel="noopener" target="_blank" title="LinkedIn">
+          <svg aria-hidden="true" viewBox="0 0 24 24">
+            <path d="M4.98 3.5C4.98 4.88 3.87 6 2.5 6S0 4.88 0 3.5 1.11 1 2.5 1s2.48 1.12 2.48 2.5zM.5 8h4V24h-4V8zM8 8h3.8v2.2h.1c.5-1 1.8-2.2 3.8-2.2 4 0 4.7 2.6 4.7 6V24h-4v-7.8c0-1.9 0-4.2-2.6-4.2s-3 2-3 4v8H8V8z"></path>
+          </svg>
+        </a>
+        <!-- X -->
+        <a class="icon" href="https://twitter.com/intent/tweet?url=https://azenor.org/" rel="noopener" target="_blank" title="X">
+          <svg aria-hidden="true" viewBox="0 0 24 24">
+            <path d="M18.24 2H21l-6.6 7.55L22 22h-6.6l-4.7-6.1L5.4 22H2.6l7.1-8.1L2 2h6.7l4.3 5.6L18.24 2z"></path>
+          </svg>
+        </a>
+        <!-- Facebook -->
+        <a class="icon" href="https://www.facebook.com/sharer/sharer.php?u=https://azenor.org/" rel="noopener" target="_blank" title="Facebook">
+          <svg aria-hidden="true" viewBox="0 0 24 24">
+            <path d="M22 12a10 10 0 1 0-11.6 9.9v-7H7.9v-2.9h2.5V9.8c0-2.5 1.5-3.9 3.8-3.9 1.1 0 2.2.2 2.2.2v2.4h-1.2c-1.2 0-1.6.8-1.6 1.5v1.8h2.8l-.4 2.9h-2.4v7A10 10 0 0 0 22 12z"></path>
+          </svg>
+        </a>
+      </div>
+    </div>
+
+    <div class="footer-right">
+      <a class="buy-btn" href="achat.html">Acheter le livre</a>
+    </div>
+  </div>
+</footer>
+
+</body>
+</html>
