--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Azénor – Le site officiel du roman Le Testament d’Azénor</title>
-  <meta name="description"
-        content="Site officiel autour d’Azénor, héroïne du roman historique Le Testament d’Azénor d’Alain Bertrand.">
+  <title>Azénor – héroïne du roman Le Testament d’Azénor</title>
+  <meta name="description" content="Site officiel autour d’Azénor, héroïne du roman historique Le Testament d’Azénor d’Alain Bertrand.">
 
   <link rel="canonical" href="https://azenor.org/">
   <link rel="icon" href="/favicon.ico">
@@ -14,16 +13,16 @@
   <style>
     body{
       margin:0;
-      font-family: system-ui, -apple-system, Segoe UI, Arial, sans-serif;
-      background:#111;
-      color:#eee;
+      font-family: system-ui, -apple-system, Arial, sans-serif;
+      background:#0f0f0f;
+      color:#eaeaea;
     }
     header{
       background:#000;
       border-bottom:1px solid #333;
     }
     nav{
-      max-width:1000px;
+      max-width:1100px;
       margin:auto;
       padding:14px 20px;
       display:flex;
@@ -36,7 +35,7 @@
       font-weight:600;
     }
     main{
-      max-width:1000px;
+      max-width:1100px;
       margin:40px auto;
       padding:0 20px;
     }
@@ -50,7 +49,7 @@
       gap:32px;
       align-items:start;
     }
-    @media(max-width:720px){
+    @media(max-width:800px){
       .hero{ grid-template-columns:1fr; }
     }
     img{
@@ -59,7 +58,7 @@
     }
     .btn{
       display:inline-block;
-      margin-top:20px;
+      margin-top:18px;
       padding:10px 16px;
       border:1px solid #f28c28;
       color:#f28c28;
@@ -80,7 +79,7 @@
 
 <header>
   <nav>
-    <a href="./">Accueil</a>
+    <a href="./">Azénor</a>
     <a href="personnages.html">Personnages</a>
     <a href="veritable-legende-azenor.html">La légende</a>
     <a href="making-off.html">Making of</a>
@@ -91,8 +90,7 @@
 <main>
   <section class="hero">
     <div>
-      <img src="images/accueil/couverture.jpg"
-           alt="Couverture du roman Le Testament d’Azénor">
+      <img src="images/accueil/couverture.jpg" alt="Couverture du roman Le Testament d’Azénor">
     </div>
 
     <div>
